# email-discord-bot

./: .gitignore  README.md  config.template.py  email-to-discord.template.conf  main.py  pyproject.toml  requirements.txt  test.py
email_to_discord/: __main__.py  bot.py
